# introduction_to_unit_testing_with_google_test

./: 02_ut_gtest.cc  03_ut_TEST.cc  05_ut_TEST_P.cc  07_ut_FRIEND_TEST.cc  08_ut_assert_vs_expect.cc  10_ut_generalized_assertion.cc  11_ut_boolean_conditions.cc  13_ut_string_comparison.cc  14_ut_floating-point_comparison.cc  15_ut_exception_assertions.cc  18_ut_death_assertions.cc  CMakeLists.txt  README.md  classes.cc  classes.h  functions.h
code_examples/: 01_ut_manual.cc  04_ut_TEST_F.cc  06_ut_TYPED_TEST.cc  09_ut_explicit_success_and_failure.cc  12_ut_binary_comparison.cc  16_ut_predicate_assertions.cc  17_ut_windows_HRESULT_assertion.cc  functions.cc  main.cc
